--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <!-- ImageListFragment values -->
     <string name="search">Search</string>
-    <string name="subreddit">Subreddit…</string>
+    <string name="subreddit">Kostya-Subreddit…</string>
     <string name="no_image_show">No image to show!</string>
     <string name="no_internet">No internet connection!</string>
 
